--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_me">Tôi</string>
     <string name="search">Quà tặng tết thầy cô</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
